--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,18 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "build/client",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": null,
   "functions": {
-    "app/routes/**": {
+    "build/server/index.js": {
+      "runtime": "nodejs18.x",
       "maxDuration": 10
     }
   },
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.js"
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/server/index.js"
     }
   ]
 }
