--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "buildCommand": "npm run build",
   "functions": {
     "build/server/index.js": {
-      "runtime": "nodejs18.x",
-      "maxDuration": 10
+      "runtime": "nodejs20.x"
     }
   },
   "routes": [
