--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "functions": {
-    "build/server/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/build/server/index.js"
-    }
-  ]
+  "buildCommand": "npm run build"
 }
